--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -20,7 +20,9 @@
       <h1>{{ page.title }}</h1>
       {{ content }}
     </div>
+    {% include byline.html %}
   </div>
+  {% include footer.html %}
 
 </body>
 </html>
