--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,11 @@
 
   <div class='container'>
       {{ content }}
+      
+      {% include byline.html %}
   </div>
+
+  {% include footer.html %}
 
 </body>
 </html>
