--- a/src/application.scss
+++ b/src/application.scss
@@ -14,6 +14,12 @@ h2 { font-size: large; margin-top: 2em; }
 p { line-height: 1.5em; margin: 0.5em 0; }
 blockquote { font-style: italic; padding: 0 1em; }
 em { font-style: italic; }
+fieldset { 
+  @include border-radius(0.6em);
+  border: 1px solid black; 
+  padding: 0 4px;
+}
+legend { font-weight: bold; font-size: small; }
 
 .container {
   @include border-radius(0.6em);
