--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@
       {{ content }}
     </div>
     {% include byline.html %}
+    {% include tweet.html %}
   </div>
   {% include footer.html %}
 </body>
